# duocb

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build-ios.sh
.github/workflows/: release.yml
crates/duocb/: Cargo.toml  build.rs
crates/duocb-core/: Cargo.toml
crates/duocb-core/examples/: token_peer.rs
crates/duocb-core/src/: auth.rs  identity.rs  lan.rs  lib.rs  manual_code.rs  nostr.rs  pin.rs  pin_auth.rs  pin_record.rs  protocol.rs  subnet.rs
crates/duocb-core/src/lan/: dnssd.rs  mod.rs  swarm.rs  unicast.rs
crates/duocb-core/src/net/: endpoint.rs  mod.rs  runtime.rs
crates/duocb-ffi/: Cargo.toml
crates/duocb-ffi/src/: lib.rs
crates/duocb/icons/: icon.icns
crates/duocb/src/: clipboard.rs  config.rs  main.rs
crates/duocb/src/app/: callbacks.rs  item.rs  keys.rs  mod.rs  sync.rs
crates/duocb/src/ui/: app.rs  configure.rs  mod.rs  screens.rs  session.rs
crates/duocb/ui/: client.slint  configure.slint  globals.slint  main.slint  modals.slint  quick.slint  server.slint  session.slint  theme.slint  types.slint  widgets.slint
docs/: ARCHITECTURE.md  ROADMAP.md
icons/: icon.icns
ios/: duocb.h
src/: auth.rs  clipboard.rs  config.rs  main.rs  nostr.rs  pin_auth.rs  protocol.rs
src/net/: endpoint.rs  mod.rs  runtime.rs
src/ui/: app.rs  mod.rs  screens.rs  session.rs
