[package]
name = "duocb"
version = "0.0.2"
edition = "2024"
description = "P2P clipboard sharing between two devices over iroh"

[dependencies]
# GUI
eframe = "0.35"
arboard = "3.6.1"

# P2P transport
iroh = "1.0.2"
iroh-mdns-address-lookup = "0.4.0"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
futures = "0.3"

# Signaling
nostr-sdk = { version = "0.44.1", features = ["nip44"] }
sha2 = "0.10"
argon2 = "0.5.3"
subtle = "2"
base64 = "0.22"
rand = "0.9"

# Async runtime + plumbing
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
parking_lot = "0.12"

# Serialization / misc
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
toml = "1"
dirs = "6"
jiff = "0.2"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

# Installer packaging (`cargo packager`): .dmg on macOS, .msi (WiX) on Windows.
# Icons live in icons/ (icon.png is also baked into the binary as the window/Dock
# icon; see src/main.rs).
[package.metadata.packager]
product-name = "duocb"
identifier = "com.andrewtheguy.duocb"
category = "Utility"
icons = ["icons/icon.icns", "icons/icon.ico", "icons/icon.png"]
