[workspace]
members = ["crates/*"]
resolver = "3"
# Bare `cargo build` skips the iOS staticlib (built via build-ios.sh with
# `-p duocb-ffi`); `--workspace` still covers all crates for clippy/test.
default-members = ["crates/duocb-core", "crates/duocb"]

[workspace.package]
version = "0.0.20"
edition = "2024"
description = "P2P clipboard sharing between two devices over iroh"

[workspace.dependencies]
duocb-core = { path = "crates/duocb-core" }

# GUI
# Skia renderer instead of the default femtovg: native-quality text
# rasterization and CoreText/DirectWrite/fontconfig font lookup.
slint = { version = "1.17", default-features = false, features = [
    "std",
    "backend-winit",
    "renderer-skia",
    "accessibility",
    "compat-1-2",
] }
slint-build = "1.17"
arboard = "3.6.1"

# P2P transport
iroh = "1.0.2"
iroh-mdns-address-lookup = "0.4.0"
# Also the engine under iroh-mdns-address-lookup; kept on the same version so
# the two mDNS responders share one stack.
swarm-discovery = "0.6.3"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
futures = "0.3"

# Signaling
nostr-sdk = { version = "0.44.1", features = ["nip44"] }
sha2 = "0.10"
argon2 = "0.5.3"
subtle = "2"
base64 = "0.22"
rand = "0.9"

# Async runtime + plumbing
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
parking_lot = "0.12"

# Serialization / misc
crc32fast = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
dirs = "6"
jiff = "0.2"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
# The FFI staticlib must never unwind into Swift; applies workspace-wide.
panic = "abort"
