[package]
name = "duocb-core"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
iroh.workspace = true
iroh-mdns-address-lookup.workspace = true
rustls.workspace = true
futures.workspace = true
nostr-sdk.workspace = true
sha2.workspace = true
argon2.workspace = true
subtle.workspace = true
base64.workspace = true
rand.workspace = true
tokio.workspace = true
tokio-util.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
log.workspace = true

[dev-dependencies]
env_logger.workspace = true
