[package]
name = "duocb-core"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
iroh.workspace = true
rustls.workspace = true
futures.workspace = true
nostr-sdk.workspace = true
netdev.workspace = true
sha2.workspace = true
argon2.workspace = true
subtle.workspace = true
base64.workspace = true
crc32fast.workspace = true
rand.workspace = true
tokio.workspace = true
tokio-util.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
log.workspace = true

# In-process mDNS responders (multicast sockets) are desktop-only: on iOS they
# would need the restricted multicast entitlement. iOS speaks to the system
# mDNSResponder daemon through dns_sd.h instead (see src/lan/dnssd.rs).
[target.'cfg(not(target_os = "ios"))'.dependencies]
iroh-mdns-address-lookup.workspace = true
swarm-discovery.workspace = true
mdns-sd.workspace = true

# poll(2) for driving dns_sd.h operation sockets.
[target.'cfg(target_os = "ios")'.dependencies]
libc = "0.2"

[dev-dependencies]
env_logger.workspace = true
