[package]
name = "duocb"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
duocb-core.workspace = true

slint.workspace = true
arboard.workspace = true
# Only for tokio::sync::Notify (the runtime -> UI wake signal); the runtime
# itself lives in duocb-core.
tokio.workspace = true

crc32fast.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
dirs.workspace = true
jiff.workspace = true

[build-dependencies]
slint-build.workspace = true

# Installer packaging (`cargo packager`): .dmg on macOS, .msi (WiX) on Windows.
# Icons live in icons/ (icon.png is also baked into the binary as the window/Dock
# icon; see src/main.rs).
[package.metadata.packager]
product-name = "duocb"
identifier = "com.andrewtheguy.duocb"
category = "Utility"
icons = ["icons/icon.icns", "icons/icon.ico", "icons/icon.png"]
